devops/k8s/platform/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smartqueue-route
  namespace: smartqueue-platform
spec:
  parentRefs:
    - name: smartqueue-gateway
      namespace: smartqueue-platform
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: smartqueue-serving
          namespace: smartqueue-prod
          port: 8000
          weight: 90
        - name: smartqueue-serving
          namespace: smartqueue-canary
          port: 8000
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: smartqueue-serving
          namespace: smartqueue-prod
          port: 8000
          weight: 90
        - name: smartqueue-serving
          namespace: smartqueue-canary
          port: 8000
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /queue
      backendRefs:
        - name: smartqueue-serving
          namespace: smartqueue-prod
          port: 8000
          weight: 90
        - name: smartqueue-serving
          namespace: smartqueue-canary
          port: 8000
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /rank
      backendRefs:
        - name: smartqueue-serving
          namespace: smartqueue-prod
          port: 8000
          weight: 90
        - name: smartqueue-serving
          namespace: smartqueue-canary
          port: 8000
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          namespace: smartqueue-platform
          port: 4533
